# std_bot

./: .gitignore  CMakeLists.txt  test_lib.cpp
std_bot/connection/: ClientConnection.cpp  ClientConnection.h  Connection.h  ListeningServer.cpp  ListeningServer.h  NetworkConnection.cpp  NetworkConnection.h  PrefixNetworkConnection.cpp  PrefixNetworkConnection.h  ServerConnection.h
std_bot/dataContainers/: DataBuffer.h  MessageDataBuffer.cpp  MessageDataBuffer.h
std_bot/frames/: Frame.h  UpdatingFrame.h
std_bot/frames/basicFrames/: PingFrame.cpp  PingFrame.h
std_bot/frames/connectionFrames/: BasicConnectionFrame.cpp  BasicConnectionFrame.h
std_bot/logger/: Logger.cpp  Logger.h
std_bot/messaging/: ConnectionMessage.h  DofusNetworkMessage.h  Message.h  MessageInterface.cpp  MessageInterface.h  MessageTypeHandler.h  NetworkMessage.h  PrefixedMessage.h
std_bot/messaging/basicMessages/: PingMessage.h  PongMessage.h  RawDataMessage.h
std_bot/messaging/connectionMessages/: ConnectionFailMessage.h  ConnectionIdGetMessage.h  ConnectionIdMessage.h  ConnectionRequestMessage.h  ConnectionSuccessMessage.h  DisconnectFailMessage.h  DisconnectRequestMessage.h  DisconnectSuccessMessage.h  GetConnectionFocusFailMessage.h  GetConnectionFocusRequestMessage.h  GetConnectionFocusSuccessMessage.h  SendPacketFailMessage.h  SendPacketMessage.h  SendPacketRequestMessage.h  SendPacketSuccessMessage.h
std_bot/std_include/: socket_include.h  std_include.h
std_bot/test_class/: RawMessage.cpp  RawMessage.h  ReadFrame.cpp  ReadFrame.h
std_bot/units/: ConnectionUnit.cpp  ConnectionUnit.h  MessagingUnit.cpp  MessagingUnit.h  WorkingUnit.cpp  WorkingUnit.h
